schema/testdata/errors/api_unsupported_attribute.keel
api Web {
    //expect-error:5:10:E011:api 'Web' has an unrecognised attribute @what
    @what
}
